fix flex column align-items center div overflow

--- a/style/post.css
+++ b/style/post.css
@@ -5,5 +5,22 @@
 }
 
 .body {
-    max-width: 750px;
+    /*it seems that flex column with align-items canter causes divs to overflow,
+    so just set the max width to never be larger than 100% also.
+    This may be some interaction with <pre> since pages without it work fine
+    when max-width=750*/
+    max-width: min(750px, 100%);
+}
+
+.body img {
+    max-width: 30em;
+    height: auto;
+    display: block;
+    margin: 1em auto;
+}
+
+@media (max-width: 30em) {
+    .body img {
+        width: 90dvw;
+    }
 }
